2015-02-02  Per Bothner  <per@bothner.com>

	* FindTailCalls.java (checkInlineable): Set inlineHome only after
	we're checked all the tailCallers.
	(visitApplyExp): Minor tweaks.
	(checkInlineCycle): New static method.
	* LambdaExp.java (declareClosureEnv): Better inline handling.
	(compile): Follow inlining.

2015-02-02  Per Bothner  <per@bothner.com>

	* FindCapturedVars.java (checkInlineable): Move method to ...
	* FindTailCalls.java: ... here.
	(visitModuleExp): Call checkInlineable here, at end of pass.
	(checkInlineable): New helper method to walk child lambdas.
	* FindCapturedVars.java (visitLambdaExp): Don't call
	checkInleable here.

2015-02-01  Per Bothner  <per@bothner.com>

	Change handling of tail-calls and return-continuations so we
	recognize tail-calls in known-inlined lambdas like in TypeSwitch.
	These lambdas get PASSES_TAILCALLS set during validation.
	* LambdaExp.java (PASSES_TAILCALLS): New flag.
	* FindTailCalls.java (visitLambdaExp): Change the convention so the
	returnContinuation for the lambda body is the LambdaExp itself.
	This enables the PASSES_TAILCALLS optimization.
	(visitDefaultArgs): New override.
	(visitApplyExp): Update accordingly.
	Also skip out past a lambda that PASSES_TAILCALLS.
	* FindTailCalls.java (visitLambdaExp): Use a LinkedHashSet.

2015-01-30  Per Bothner  <per@bothner.com>

	* Declaration.java (checkNameDecl): Also set nameDecl to null
	if LambdaExp binding comes *after* other assignment.

2015-01-26  Per Bothner  <per@bothner.com>

	* FindCapturedVars.java (capture): Implemented "lambda lifting".
	The implementation is disabled for now as it only "99% working".
	* Declaration.java (IS_CAPTURED, DONT_COPY): New flags;

	* LambdaExp.java (isClassGenerated): Move to ...
	* ScopeExp (isClassGenerated): ... here.
	* LambdaExp.java: Use isClassGenerated more places.

2015-01-21  Per Bothner  <per@bothner.com>

	* LambdaExp.java (setInlineOnly): New method overload.
	Used during validate-apply processing.
